Fix bug where layout stretched past footer

--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -2,5 +2,4 @@
   display: flex;
   flex-flow: column;
   width: 100%;
-  height: 100%;
 }
